<resources>
    <string name="app_name">Wagba</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="email">E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connfirm_password">Confirm Password</string>
    <string name="restaurants">Restaurants</string>
    <string name="holder">Holder</string>
    <string name="profile_placeholder">Profile Placeholder</string>
    <string name="payemnts">Payemnts</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="log_out">Log out</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="description">Lorem ipsum is a place holder text that is displayed in order to be a backup text when there is no text available.</string>
    <string name="addtocart">Add to cart</string>
    <string name="ordernow">Proceed to cart</string>
    <string name="paynow">proceed to payment</string>
    <string name="nothing_to_display">Cart is empty.</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="total">Total</string>
    <string name="no_previous_orders">No previous orders.</string>
    <string name="history">History</string>
    <string name="user_name">Username</string>
</resources>