<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view2"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:textColorHint="@color/plainTextColor"
        app:boxCornerRadiusTopEnd="@dimen/_22ssp"
        app:boxCornerRadiusTopStart="@dimen/_22ssp"
        app:helperText="@string/required"

        app:helperTextTextColor="@color/mainAppColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:lines="1"
            android:paddingStart="@dimen/_22ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textColorHint="@color/plainTextColor"
        app:counterEnabled="true"
        app:counterMaxLength="16"

        app:helperText="@string/required"
        app:helperTextTextColor="@color/mainAppColor"
        app:layout_constraintTop_toBottomOf="@+id/email_container"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:lines="1"
            android:maxLength="16"
            android:paddingStart="@dimen/_22ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:textColorHint="@color/plainTextColor"
        app:boxCornerRadiusBottomEnd="@dimen/_22ssp"
        app:boxCornerRadiusBottomStart="@dimen/_22ssp"
        app:counterEnabled="true"
        app:counterMaxLength="16"

        app:helperText="@string/required"
        app:helperTextTextColor="@color/mainAppColor"
        app:layout_constraintTop_toBottomOf="@+id/password_container"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/connfirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:paddingStart="@dimen/_22ssp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainAppColor"
            android:text="@string/register"

            app:cornerRadius="@dimen/_22ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_login_text"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:backgroundTint="@color/secondaryAppColor"
            android:text="@string/login"
            app:cornerRadius="@dimen/_22ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>